[tool.poetry]
name = "drug_map"
version = "0.1.0"
description = ""
authors = ["Bradley-Butcher <bradleydpbutcher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.0.0"
pandas = "^1.3.2"
Flask = "^2.0.1"
Flask-Caching = "^1.10.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
